WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240708
[GLib] Fix typo in WebKitUserMediaPermissionRequest description
https://bugs.webkit.org/show_bug.cgi?id=240708
Summary
[GLib] Fix typo in WebKitUserMediaPermissionRequest description
Olivier Blin
Reported
2022-05-20 01:48:10 PDT
Mention enumerateDevices instead of enumeraceDevices. Introduced in
r237031
.
Attachments
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2022-05-20 01:50:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/822
EWS
Comment 2
2022-05-20 08:01:27 PDT
Committed
r294543
(
250798@main
): <
https://commits.webkit.org/250798@main
> Reviewed commits have been landed. Closing PR #822 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug