[GLib] Fix typo in WebKitUserMediaPermissionRequest description https://bugs.webkit.org/show_bug.cgi?id=240708

Patch by Olivier Blin <olivier.blin@softathome.com> on 2022-05-20
Reviewed by Adrian Perez de Castro.

Mention enumerateDevices instead of enumeraceDevices.
Introduced in r237031.

* Source/WebKit/UIProcess/API/glib/WebKitDeviceInfoPermissionRequest.cpp:

Canonical link: https://commits.webkit.org/250798@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294543 268f45cc-cd09-0410-ab3c-d52691b4dbfc